# tabularuq

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  rustfmt.toml
.devcontainer/: devcontainer.json
src/: lib.rs
src/rdb_qry_handler/: datatype.rs  error.rs  mod.rs  sqlserver.rs
src/tabular_porter/: csv.rs  error.rs  mod.rs  xslx.rs
tests/: rdb_qry_handler.rs  shared.rs
